--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
+    "swr": "^2.3.8",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
