--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
