--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@a2seven/yoo-checkout": "^1.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@prisma/client": "^5.17.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
