--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "swr": "^2.3.8",
-    "use-debounce": "^10.0.6"
+    "use-debounce": "^10.0.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@prisma/client": "^5.17.0",
